--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=debtors.accounting
+#jakarta.persistence.jdbc.url=jdbc:oracle:thin:@localhost:1521:xepdb1
+#jakarta.persistence.jdbc.username=hr
+#jakarta.persistence.jdbc.password=hr
+#jakarta.persistence.jdbc.driver-class-name=oracle.jdbc.driver.OracleDriver
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xepdb1
+spring.datasource.username=hr
+spring.datasource.password=hr
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+
+
